# LABS-B

./: .env  .gitignore  Cargo.toml  README.md
db/: Modelo Banco.mwb  amostra dados.csv
db/scripts/: 001.sql
src/: amostra.rs  db.rs  handlers.rs  login.rs  main.rs  schema.rs  usuario.rs
src/auth/: auth0.rs
