[package]
name = "LABS-B"
version = "0.1.0"
authors = ["Pedro Henrique Martins Garcia <pedro.phmg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
#rocket_codegen = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.4", features = ["mysql"] }
#diesel_codegen = { version = "*", features = ["mysql"] }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"
#dotenv = "*"
rocket_cors = "0.5.2"


[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]