[package]
name = "labs_b"
version = "0.2.0"
authors = ["Pedro Henrique Martins Garcia <pedro.phmg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core
futures = "0.3.1"
derive_more = "0.99.2"
dotenv = "0.15.0"
# Serializing and Deserializing
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
# Time Library
chrono = { version = "0.4.10", features = ["serde"] }
# Web Service
actix-web = "3.1.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
actix-service = "1.0.1"
actix-rt = "1.0.0"
actix-cors = "0.5.0"
# Database
diesel = { version = "1.4.5", features = ["mysql", "r2d2", "uuidv07", "chrono"] }
r2d2 = "0.8.9"
r2d2-diesel = "1.0.0"
# Auth
alcoholic_jwt = "1.0.0"
reqwest = "0.9.22"
